--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
   <div class="card mb-3    " style="max-width: 800px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="./image/1st.png" class="img-fluid rounded-start" alt="...">
+        <img src="./image/card1.png " class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Python Function</h5>
-          <p class="card-text">This is a python program , I used function . This program find factor,age,table,square,number and cube , etc.</p>
+          <p class="card-text">This is a python program, I used function.This program find factor,age,table,square,number and cube , etc.</p>
           <p class="card-text"><small class="text-body-secondary"></small></p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
@@ -96,19 +96,19 @@
    <div class="card mb-3    " style="max-width: 800px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="./image/image.jpg" class="img-fluid rounded-start" alt="...">
+        <img src="./image/card2.png" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">Python</h5>
-          <p class="card-text">This is not avialable for this time , I try to upload fast </p>
+          <h5 class="card-title">Website Code</h5>
+          <p class="card-text">This is my own website code. </p>
           <p class="card-text"><small class="text-body-secondary"></small></p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
+       </div>
       </div>
     </div>
   </div>
-</div>
 
   
   <!--Footer-->
