--- a/index.html
+++ b/index.html
@@ -73,8 +73,29 @@
 
   <!--Project  card-->
 
-  <!--1 card-->
+
+  <!--1std card-->
   <div class = "post1">
+  <div class="card mb-3    " style="max-width: 800px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="./image/card2.png" class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Website Code</h5>
+          <p class="card-text">This is my own website code.  Please make some different and learn it. </p>
+          <p class="card-text"><small class="text-body-secondary"></small></p>
+          <a href="https://github.com/aryansheoran205/myfirstprogram/blob/main/allinone.py" class="btn btn-primary">Visit</a>
+        </div>
+       </div>
+      </div>
+    </div>
+
+
+
+  <!--2nd card-->
+  
   <div class="card mb-3    " style="max-width: 800px;">
     <div class="row g-0">
       <div class="col-md-4">
@@ -85,44 +106,55 @@
           <h5 class="card-title">Python Function</h5>
           <p class="card-text">This is a python program, I used function.This program find factor,age,table,square,number and cube , etc.</p>
           <p class="card-text"><small class="text-body-secondary"></small></p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="https://github.com/aryansheoran205/aryansheoran205.github.io" class="btn btn-primary">Visit</a>
         </div>
       </div>
     </div>
   </div>
 
 
-   <!--2nd card-->
-   <div class="card mb-3    " style="max-width: 800px;">
+  <!--3rd card-->
+  <div class="card mb-3    " style="max-width: 800px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="./image/card2.png" class="img-fluid rounded-start" alt="...">
+        <img src="./image/card3.png" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">Website Code</h5>
-          <p class="card-text">This is my own website code. </p>
+          <h5 class="card-title">Some Game</h5>
+          <p class="card-text">Some game i make in python. games like stone, paper ,scissor etc </p>
           <p class="card-text"><small class="text-body-secondary"></small></p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="https://github.com/aryansheoran205/game" class="btn btn-primary">Visit</a>
         </div>
        </div>
       </div>
     </div>
-  </div>
-
   
-  <!--Footer-->
-  <footer>
-    <div class="col-md-4 d-flex align-items-center position-absolute bottom-0 start-0">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24">
-          <use xlink:href="#bootstrap"></use>
-        </svg>
-      </a>
-      <span class="text-white" class="mb-3 mb-md-0 text-body-secondary ">© 2024 Aryan Sheoran</span>
-    </div>
-  </footer>
+  
 
+    <!--4th card-->
+    <div class="card mb-3    " style="max-width: 800px;">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="./image/card4.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Telegram Basic Bot</h5>
+            <p class="card-text">This is a telegram basic bot and you customise easily for you. </p>
+            <p class="card-text"><small class="text-body-secondary"></small></p>
+            <a href="https://github.com/aryansheoran205/telegrambot/blob/main/main.py" class="btn btn-primary">Visit</a>
+          </div>
+         </div>
+        </div>
+      </div>
+    </div>
+
+    
+  <!--Footer-->
+  <footer class="footer">
+    <p>&copy; 2024 Aryan Sheoran</p>
+  </footer>
 
 <!--script link-->
 <script src="https://kit.fontawesome.com/69fde7054c.js" crossorigin="anonymous"></script>
