--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Website Code</h5>
-          <p class="card-text">This is my own website code.  Please make some different and learn it. </p>
+          <p class="card-text">This is my own website code.  Please make something different and learn it. </p>
           <p class="card-text"><small class="text-body-secondary"></small></p>
           <a href="https://github.com/aryansheoran205/myfirstprogram/blob/main/allinone.py" class="btn btn-primary">Visit</a>
         </div>
@@ -104,7 +104,7 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Python Function</h5>
-          <p class="card-text">This is a python program, I used function.This program find factor,age,table,square,number and cube , etc.</p>
+          <p class="card-text">This is a Python program; I used functions. This program finds factors, age, tables, squares, numbers, cubes, etc.</p>
           <p class="card-text"><small class="text-body-secondary"></small></p>
           <a href="https://github.com/aryansheoran205/aryansheoran205.github.io" class="btn btn-primary">Visit</a>
         </div>
@@ -122,7 +122,7 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Some Game</h5>
-          <p class="card-text">Some game i make in python. games like stone, paper ,scissor etc </p>
+          <p class="card-text">Some game i make in Python. Games like stone, paper,  scissors, etc. Try</p>
           <p class="card-text"><small class="text-body-secondary"></small></p>
           <a href="https://github.com/aryansheoran205/game" class="btn btn-primary">Visit</a>
         </div>
@@ -141,7 +141,7 @@
         <div class="col-md-8">
           <div class="card-body">
             <h5 class="card-title">Telegram Basic Bot</h5>
-            <p class="card-text">This is a telegram basic bot and you customise easily for you. </p>
+            <p class="card-text">This is a basic telegram bot, and you can customise it easily for yourself. And use in a telegram group and channel. </p>
             <p class="card-text"><small class="text-body-secondary"></small></p>
             <a href="https://github.com/aryansheoran205/telegrambot/blob/main/main.py" class="btn btn-primary">Visit</a>
           </div>
