--- a/contact.html
+++ b/contact.html
@@ -95,30 +95,25 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
  
+ <!--Flip Card-->
+ <div class="flip-card flip fixed-bottom">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="./image/harish(1).png" alt="Avatar" style="width:200px;height:200px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>Harish Sheoran</h1>
+      <h3> Engineer</h3>
+      <p>I build scalable, high-performance systems —APIs, microservices, and distributed systems, while driving automation, reliability, and cloud-ready infrastructure through DevOps expertise. My work empowers teams and delivers results that scale.</p>
+      <a href="https://harisheoran.github.io/" class="btn btn-primary">Visit</a>
+    </div>
+  </div>
+</div> 
 
    <!--Footer-->
-    <footer>
-      <div class="col-md-4 d-flex align-items-center position-absolute bottom-0 start-0">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <svg class="bi" width="30" height="24">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
-        </a>
-        <span class="text-white" class="mb-3 mb-md-0 text-body-secondary ">© 2024 Aryan Sheoran</span>
-      </div>
-  
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-              <use xlink:href="#twitter"></use>
-            </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-              <use xlink:href="#instagram"></use>
-            </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-              <use xlink:href="#facebook"></use>
-            </svg></a></li>
-      </ul>
-    </footer>
+   <footer class="footer">
+    <p>&copy; 2024 Aryan Sheoran</p>
+  </footer>  
 </body>
 
 </html>
