--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <!--profile image-->
   <div class="image">
-    <img src="./image/profilepic.jpg" alt="My Image" style="width:80px" class="mainimg">
+    <img class="mainimg round" src="./image/profilepic.jpg" alt="My Image" style="width:80px" >
   </div>
   
   <h1 class="textinCentre">Aryan Sheoran</h1>
@@ -156,11 +156,13 @@
       </div>
     </div>
 
+
+
     <!--Flip Card-->
     <div class="flip-card flip fixed-bottom">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="./image/harish(1).png" alt="Avatar" style="width:200px;height:200px;">
+          <img class="round" src="./image/harish(1).png" alt="Avatar" style="width:200px;height:200px;">
         </div>
         <div class="flip-card-back">
           <h1>Harish Sheoran</h1>
