--- a/contact.html
+++ b/contact.html
@@ -55,34 +55,34 @@
   </div>
   <h1 class="text-black">Lets get in touch</h1>
   <p>
-  <h5><a class="text-primary" class="link-opacity-100-hover" href="mailto:aryansheoran205@gmail.com " target="_blank">
+  <h5><a class="text-primary d-inline-flex focus-ring focus-ring-dark py-1 px-2 text-decoration-none border rounded-2" class="link-opacity-100-hover" href="mailto:aryansheoran205@gmail.com " target="_blank">
       <i class="fa-brands fa-google" style="color: white;"></i>Mail</a></h5>
 
   <h3 class="text-black">Connect with me  </h3>
 
-  <h5><a class="text-primary" class="link-opacity-100-hover" href="https://github.com/aryansheoran205"
+  <h5><a class="text-primary d-inline-flex focus-ring focus-ring-dark py-1 px-2 text-decoration-none border rounded-2" class="link-opacity-100-hover" href="https://github.com/aryansheoran205"
       target="_blank"><i class="fa-brands fa-github" style="color:white;"></i>GitHub</a></h5>
 
 
-  <h5><a class="text-primary" class="link-opacity-100-hover" href="https://twitter.com/aryansheoran205"
+  <h5><a class="text-primary d-inline-flex focus-ring focus-ring-dark py-1 px-2 text-decoration-none border rounded-2" class="link-opacity-100-hover" href="https://twitter.com/aryansheoran205"
       target="_blank"><i class="fa-brands fa-x-twitter" style="color: white;"></i>Twitter</a></h5>
 
 
-  <h5><a class="text-primary" class="link-opacity-100-hover" href="https://www.linkedin.com/in/aryansheoran"
+  <h5><a class="text-primary d-inline-flex focus-ring focus-ring-dark py-1 px-2 text-decoration-none border rounded-2 " class="link-opacity-100-hover" href="https://www.linkedin.com/in/aryansheoran"
       target="_blank"><i class="fa-brands fa-linkedin" style="color: white;"></i>Linkedin</a></h5>
 
-  <h5><a class="text-primary" class="link-opacity-100-hover"
+  <h5><a class="text-primary d-inline-flex focus-ring focus-ring-dark py-1 px-2 text-decoration-none border rounded-2" class="link-opacity-100-hover"
       href="https://www.youtube.com/channel/UCZhCZo9WdEvmPTmiWUPPWyA" target="_blank"><i class="fa-brands fa-youtube"
         style="color: white;"></i>Youtube</a></h5>
 
-  <h5><a class="text-primary" class="link-opacity-100-hover" href="https://www.instagram.com/aryansheoran205"
+  <h5><a class="text-primary d-inline-flex focus-ring focus-ring-dark py-1 px-2 text-decoration-none border rounded-2" class="link-opacity-100-hover" href="https://www.instagram.com/aryansheoran205"
       target="_blank"><i class="fa-brands fa-instagram" style="color: white;"></i>Instagram</a></h5>
 
-  <h5><a class="text-primary" class="link-opacity-100-hover" href="https://gitlab.com/aryansheoran205"
+  <h5><a class="text-primary d-inline-flex focus-ring focus-ring-dark py-1 px-2 text-decoration-none border rounded-2" class="link-opacity-100-hover" href="https://gitlab.com/aryansheoran205"
       target="_blank"><i class="fa-brands fa-gitlab" style="color: white;"></i>GitLab</a></h5>
 
 
-  <h5><a class="text-primary" class="link-opacity-100-hover" href="" target="_blank"><i class="fa-brands fa-discord"
+  <h5><a class="text-primary d-inline-flex focus-ring focus-ring-dark py-1 px-2 text-decoration-none border rounded-2" class="link-opacity-100-hover" href="" target="_blank"><i class="fa-brands fa-discord"
         style="color: white;"></i>Discord--@aryansheoran205</a></h5>
   </p>
   <h3 class="text-black">Play with me</h3>
@@ -96,10 +96,10 @@
     crossorigin="anonymous"></script>
  
  <!--Flip Card-->
- <div class="flip-card flip fixed-top">
+ <div class="flip-card fixed-top">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="./image/harish(1).png" alt="Avatar" style="width:200px;height:200px;">
+      <img class="round" src="./image/harish(1).png" alt="Avatar" style="width:200px;height:200px;">
     </div>
     <div class="flip-card-back">
       <h1>Harish Sheoran</h1>
