--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
     <!--Flip Card-->
-    <div class="flip-card fixed-top">
+    <div class="flip-card fixed-bottom">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img class="round" src="./image/harish(1).png" alt="Avatar" style="width:200px;height:200px;">
