--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
     crossorigin="anonymous"></script>
  
  <!--Flip Card-->
- <div class="flip-card fixed-top">
+ <div class="flip-card fixed-bottom">
   <div class="flip-card-inner">
     <div class="flip-card-front">
       <img class="round" src="./image/harish(1).png" alt="Avatar" style="width:200px;height:200px;">
