--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
     <div class="flip-card flip fixed-top">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img class="round" src="./image/harish(1).png" alt="Avatar" style="width:200px;height:200px;">
+          <img class="round" src="./image/harish(1).png" alt="Avatar" style="width:80px;height:80px; ">
+        <h5>Visit </h5>
         </div>
         <div class="flip-card-back">
           <h1>Harish Sheoran</h1>
