--- a/contact.html
+++ b/contact.html
@@ -96,13 +96,14 @@
     crossorigin="anonymous"></script>
  
  <!--Flip Card-->
- <div class="flip-card flip fixed-top">
+ <div class="flip-card ">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img class="round" src="./image/harish(1).png" alt="Avatar" style="width:80px;height:80px;">
+      <img class="round" src="./image/harish(1).png" alt="Avatar" style="width:80px;height:80px; ">
+    <h5>Visit </h5>
     </div>
     <div class="flip-card-back">
-      <h1>Harish Sheoran</h1>
+      <h2>Harish Sheoran</h2>
       <h3> Engineer</h3>
       <p>I build scalable, high-performance systems —APIs, microservices, and distributed systems, while driving automation, reliability, and cloud-ready infrastructure through DevOps expertise. My work empowers teams and delivers results that scale.</p>
       <a href="https://harisheoran.github.io/" class="btn btn-primary">Visit</a>
