--- a/contact.html
+++ b/contact.html
@@ -96,20 +96,16 @@
     crossorigin="anonymous"></script>
  
  <!--Flip Card-->
- <div class="flip-card ">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-      <img class="round" src="./image/harish(1).png" alt="Avatar" style="width:80px;height:80px; ">
-    <h5>Visit </h5>
-    </div>
-    <div class="flip-card-back">
-      <h2>Harish Sheoran</h2>
-      <h3> Engineer</h3>
-      <p>I build scalable, high-performance systems —APIs, microservices, and distributed systems, while driving automation, reliability, and cloud-ready infrastructure through DevOps expertise. My work empowers teams and delivers results that scale.</p>
-      <a href="https://harisheoran.github.io/" class="btn btn-primary">Visit</a>
-    </div>
-  </div>
-</div> 
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <div class="card">
+   <img class="mainimg round" src="./image/harish(1).png" alt="Harish" style="width:70%">
+   <h2>Harish Sheoran</h2>
+   <p class="title">Engineer</p>
+   <a href="https://x.com/harisheoran"><i class="fa-brands fa-x-twitter"></i></a>
+   <a href="https://x.com/harisheoran"><i class="fa-brands fa-linkedin"></i></a>
+   <a href="https://github.com/harisheoran"><i class="fa-brands fa-github"></i></a>
+   <p><button href="https://harisheoran.github.io/">Visit Website</button></p>
+ </div>
 
    <!--Footer-->
    <footer class="footer">
