--- a/contact.html
+++ b/contact.html
@@ -101,10 +101,10 @@
    <img class="mainimg round" src="./image/harish(1).png" alt="Harish" style="width:70%">
    <h2>Harish Sheoran</h2>
    <p class="title">Engineer</p>
-   <a href="https://x.com/harisheoran"><i class="fa-brands fa-x-twitter"></i></a>
-   <a href="https://x.com/harisheoran"><i class="fa-brands fa-linkedin"></i></a>
-   <a href="https://github.com/harisheoran"><i class="fa-brands fa-github"></i></a>
-   <p><button href="https://harisheoran.github.io/">Visit Website</button></p>
+   <a href="https://x.com/harisheoran"><i target="_blank" class="fa-brands fa-x-twitter"></i></a>
+   <a href="https://x.com/harisheoran"><i target="_blank" class="fa-brands fa-linkedin"></i></a>
+   <a href="https://github.com/harisheoran"><i target="_blank" class="fa-brands fa-github"></i></a>
+   <p><button target="_blank" href="https://harisheoran.github.io/">Visit Website</button></p>
  </div>
 
    <!--Footer-->
