--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="card-body">
         <h5 class="card-title">Website Code</h5>
         <p class="card-text">This is my own website code.  Please make something different and learn it</p>
-        <a href="https://github.com/aryansheoran205/aryansheoran205.github.io" class="btn btn-primary">Visit</a>
+        <a href="https://github.com/aryansheoran205/aryansheoran205.github.io" target="_blank" class="btn btn-primary">Visit</a>
         <a  target="_blank"><i class="fa-regular fa-thumbs-up fa-xl" style="color: black;"></i></a>
         <a  target="_blank"><i class="fa-regular fa-eye " style="color: black;"></i></a>
       </div>
@@ -101,7 +101,7 @@
     <div class="card-body">
       <h5 class="card-title">Python Function</h5>
       <p class="card-text"> I used functions. This program finds factors, age, tables, squares, numbers, cubes, etc.</p>
-      <a href="https://github.com/aryansheoran205/myfirstprogram" class="btn btn-primary">Visit</a>
+      <a href="https://github.com/aryansheoran205/myfirstprogram" target="_blank" class="btn btn-primary">Visit</a>
       <a  target="_blank"><i class="fa-regular fa-thumbs-up fa-xl" style="color: black;"></i></a>
       <a  target="_blank"><i class="fa-regular fa-eye " style="color: black;"></i></a>
     </div>
@@ -115,7 +115,7 @@
     <div class="card-body">
       <h5 class="card-title">Some Game</h5>
       <p class="card-text">Some game i make in Python. Games like stone, paper,  scissors, etc. Try</p>
-      <a href="https://github.com/aryansheoran205/game" class="btn btn-primary">Visit</a>
+      <a href="https://github.com/aryansheoran205/game" target="_blank" class="btn btn-primary">Visit</a>
       <a  target="_blank"><i class="fa-regular fa-thumbs-up fa-xl" style="color: black;"></i></a>
       <a  target="_blank"><i class="fa-regular fa-eye " style="color: black;"></i></a>
     </div>
@@ -128,7 +128,7 @@
       <div class="card-body">
         <h5 class="card-title">Some Game</h5>
         <p class="card-text">This is a basic telegram bot . And use in a telegram group and channel.</p>
-        <a href="https://github.com/aryansheoran205/telegrambot" class="btn btn-primary">Visit</a>
+        <a href="https://github.com/aryansheoran205/telegrambot" target="_blank" class="btn btn-primary">Visit</a>
         <a  target="_blank"><i class="fa-regular fa-thumbs-up fa-xl" style="color: black;"></i></a>
         <a  target="_blank"><i class="fa-regular fa-eye " style="color: black;"></i></a>
       </div>
@@ -146,10 +146,10 @@
       <img class="mainimg round" src="./image/harish(1).png" alt="Harish" style="width:70%">
       <h2>Harish Sheoran</h2>
       <p class="title">Engineer</p>
-      <a href="https://x.com/harisheoran"><i class="fa-brands fa-x-twitter"></i></a>
-      <a href="https://x.com/harisheoran"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="https://github.com/harisheoran"><i class="fa-brands fa-github"></i></a>
-      <p><button href="https://harisheoran.github.io/">Visit Website</button></p>
+      <a href="https://x.com/harisheoran"><i target="_blank"  class="fa-brands fa-x-twitter"></i></a>
+      <a href="https://x.com/harisheoran"><i target="_blank" class="fa-brands fa-linkedin"></i></a>
+      <a href="https://github.com/harisheoran"><i target="_blank" class="fa-brands fa-github"></i></a>
+      <p><button target="_blank" href="https://harisheoran.github.io/">Visit Website</button></p>
     </div>
 
 
