--- a/contact.html
+++ b/contact.html
@@ -104,8 +104,8 @@
    <a href="https://x.com/harisheoran"><i target="_blank" class="fa-brands fa-x-twitter"></i></a>
    <a href="https://x.com/harisheoran"><i target="_blank" class="fa-brands fa-linkedin"></i></a>
    <a href="https://github.com/harisheoran"><i target="_blank" class="fa-brands fa-github"></i></a>
-   <p><button target="_blank" href="https://harisheoran.github.io/">Visit Website</button></p>
- </div>
+   <a href="https://harisheoran.github.io/" target="_blank" class="btn btn-primary">Visit Website</a>
+  </div>
 
    <!--Footer-->
    <footer class="footer">
