Add new repo link, Jumping Man Game repo

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class = " row ">
     
     <div class="card " style="width: 18rem;">
-      <img src="./image/card1.png" class="card-img-top" alt="...">
+      <img src="./image/Card-1.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Website Code</h5>
         <p class="card-text">This is my own website code.  Please make something different and learn it</p>
@@ -93,14 +93,25 @@
       </div>
     </div>
 
-    
-  <!--2nd card-->
+<!--2nd card-->
+     <div class="card " style="width: 18rem;">
+      <img src="./image/Card-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Jumping Man Game </h5>
+        <p class="card-text">I made this game using Python and PyGame docs. Video link in my GitHub repo.</p>
+        <a href="https://github.com/aryansheoran205/Jumping-Man" target="_blank" class="btn btn-primary">Visit</a>
+        <a  target="_blank"><i class="fa-regular fa-thumbs-up fa-xl" style="color: black;"></i></a>
+        <a  target="_blank"><i class="fa-regular fa-eye " style="color: black;"></i></a>
+      </div>
+    </div>
+
+  <!--3nd card-->
   
   <div class="card" style="width: 18rem;">
-    <img src="./image/card2.png" class="card-img-top" alt="...">
+    <img src="./image/Card-3.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Python Function</h5>
-      <p class="card-text"> I used functions. This program finds factors, age, tables, squares, numbers, cubes, etc.</p>
+      <p class="card-text"> I used functions. This program finds factors, age, tables, numbers etc.</p>
       <a href="https://github.com/aryansheoran205/myfirstprogram" target="_blank" class="btn btn-primary">Visit</a>
       <a  target="_blank"><i class="fa-regular fa-thumbs-up fa-xl" style="color: black;"></i></a>
       <a  target="_blank"><i class="fa-regular fa-eye " style="color: black;"></i></a>
@@ -108,10 +119,10 @@
   </div>
  
 
-  <!--3rd card-->
+  <!--4rd card-->
  
   <div class="card" style="width: 18rem ";>
-    <img src="./image/card3.png" class="card-img-top" alt="...">
+    <img src="./image/Card-4.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Some Game</h5>
       <p class="card-text">Some game i make in Python. Games like stone, paper,  scissors, etc. Try</p>
@@ -122,9 +133,9 @@
   </div>
 
 
-    <!--4th card-->
+    <!--5th card-->
     <div class="card" style="width: 18rem;">
-      <img src="./image/card4.png" class="card-img-top" alt="...">
+      <img src="./image/Card-5.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Some Game</h5>
         <p class="card-text">This is a basic telegram bot . And use in a telegram group and channel.</p>
@@ -140,7 +151,7 @@
 
 
 
-    <!--Flip Card-->
+    <!--Harish Information-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="card">
       <img class="mainimg round" src="./image/harish(1).png" alt="Harish" style="width:70%">
